--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!-- Code Challenge #2 -->
 
-<!-- Directions: Write 1 html page that includes the following tags: html, head, title, body, div. You must use proper HTML syntax and arrange the tags in the correct order. The DOCTYPE has been included for you. 
+<!-- Directions: Write 1 html page that includes the following tags:
+html, head, title, body, div. You must use proper HTML syntax and arrange the tags in the correct order. 
+The DOCTYPE has been included for you. 
 
-BONUS POINT: Nest an image tag inside of the div element. Use this for your image source: http://placekitten.com/g/300/300. Your image tag should include the image source and an alt attribute.-->
+BONUS POINT: Nest an image tag inside of the div element. Use this for 
+your image source: http://placekitten.com/g/300/300. Your image tag should include the image source and an alt attribute.-->
 
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>Free Bobby Shmurda</title>
+  </head>
+  <body>
+    <div>
+      <h1>He didn't do it!</h1>
+      <p> save my boy Bobby</p>
+      <img src="http://placekitten.com/g/300/300" alt="A Kitten'"> 
+      <img src="https://cabeldotme.files.wordpress.com/2012/12/683052149.gif?w=628" al="Guy pointing">
+    </div>
+  </body>
+</html>
